...
                        }
                    }
                    .frame(minWidth: 0, maxWidth: .infinity)
                    
                    
                    NavigationLink {
                        HistoryView(items: contentViewViewModel.historyItems)
                            .environmentObject(contentViewViewModel)
                            .accessibilityIdentifier("HistoryView")
                    } label: {
                        VStack {
                            Image(systemName: "arrow.down.circle")
                                .resizable()
                                .frame(width: 25, height: 25)
                            Text("History")
                        }
                    }
                    .frame(minWidth: 0, maxWidth: .infinity)
                }
            }
        }
...
